# tutorial-fast-api

./: .gitignore  NOTAS_APRESENTACAO.md  README.md  pyproject.toml
00-introducao/: README.md
01-hello-world/: README.md  main.py
02-rotas-get/: README.md  main.py
03-rotas-post/: README.md  main.py
04-validacao-pydantic/: README.md  main.py  models.py
05-organizando-codigo/: README.md  main.py  models.py  routers.py
scripts/: testes_curl.sh  testes_httpie.sh
